@@ -1,1 +1,1 @@
-DIST squash_dir-11.1.tar.bz2 22286 RMD160 60f153994f046763c273c4a2e6c9290741e62605 SHA1 20d3e4a04b35540893da5098fed80739c6758984 SHA256 1b2806e8623204e95f1c465f6975f1a2afb9597adfcd531fcb07029b17dc3b53
+DIST squash_dir-11.2.tar.gz 25031 RMD160 b1a047147cf8ac08a1a1ff083b305198d761debf SHA1 ba442eb5b01b2ddc7019344d83fdb10d8ceef98a SHA256 2cd2467aed0adf4e9072db232a5f7b053b33fcd50c44bc7c04931477608a9bca
